# RUDRAv3

BOM/: Readme.md  Rudra BOM.xlsx
Commands/: cmds
IMU-Teensy/v1_IMU_ArduioMega/: v1_IMU_ArduioMega.ino
IMU-Teensy/v2_IMU_Teensy_TF/: v2_IMU_Teensy_TF.ino
IMU-Teensy/without_int/: without_int.ino
ROS/rudra/: CMakeLists.txt  package.xml
ROS/rudra/launch/: rudra_bringup.launch  uno_teensy_com.launch
ROS/rudra/msg/: joy_msg.msg
ROS/rudra_description/: CMakeLists.txt  package.xml
ROS/rudra_description/urdf/: rudra.urdf
ROS/rudra_navigation/: CMakeLists.txt  package.xml
ROS/rudra_navigation/launch/: move_base.launch  rur_navigation.launch
ROS/rudra_navigation/param/: costmap_common_params.yaml
Sabertooth/: Sabertooth.h
uno-teensy-ros_AD/: uno-teensy-ros_AD.ino
v2_Sabertooth_ROS_cmd_vel/: v2_Sabertooth_ROS_cmd_vel.ino
v2_base_controler_AE/: ros.h  v2_base_controler_AE.ino
