<?xml version="1.0"?>
<package format="2">
  <name>rudra_navigation</name>
  <version>1.0.0</version>
  <description>The rudra_navigation package provides roslaunch scripts for starting the navigation.</description>


  <maintainer email="adhi.pesit@gmail.com">rudra</maintainer>


  <license>GPLv3</license>


  
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


</package>
